added images to repo and updated title, header hmtl element, and nav html element

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css">
-    <title>website</title>
+    <title>Horiseon Marketing: Best in Class</title>
 </head>
 
 <body>
-    <div class="header">
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -22,8 +22,9 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
+        </header>
+    </nav>
+    
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
