fixed the css resource

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Users/kcortina/UW-Bootcamp/html-css-and-git-_code-refactor/style.css">
     <title>Horiseon Marketing: Best in Class</title>
 </head>
 
